Add JSON response when expecting 'application/json'
